--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_API=http://localhost:4000
-CLOUDINARYURL=CLOUDINARY_URL=cloudinary://755425864965657:Ej4CetIPCdFInjm_JsOU3Wve1yA@deopklf
+REACT_APP_GOOGLE_MAP=AIzaSyA4rOE7ltgk7tcaYziSIVPOSIF0RIClTDo
