--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "google-map-react": "^1.1.5",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0",
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
