--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "bootstrap-select": "^1.13.18",
     "google-map-react": "^1.1.5",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0",
