--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "happyearth-react",
+  "engines": {
+    "node": "15.5.0"
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
