--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "happyearth-react",
   "version": "0.1.0",
+  "engines": {
+    "node": "15.5.0"
+  },
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
